--- a/index.html
+++ b/index.html
@@ -127,9 +127,10 @@
             <div>More</div>
           </li>
         </ul>
+        <div class="nav-bar-space"></div>
         <ul class="nav-bar-right" style="list-style-type: none">
-          <li id="nav-bar-settings">Settings</li>
-          <li id="nav-bar-tools">Tools</li>
+          <li class="tools">Settings</li>
+          <li class="tools">Tools</li>
         </ul>
       </div>
       <hr id="nav-bar-line" />
