completed results about bar

--- a/index.html
+++ b/index.html
@@ -161,11 +161,59 @@
 
       <!-- results about -->
       <div class="results-about">
-        <p>See results about</p>
+        <div id="see-results">See results about</div>
+        <hr id="first-bar" />
+        <div class="help-movie">
+          <img
+            id="help-movie-cover"
+            src="https://img.discogs.com/J6DAHz6jMa4OaZKivIIiJgK54RY=/fit-in/600x600/filters:strip_icc():format(jpeg):mode_rgb():quality(90)/discogs-images/R-5803026-1564669628-3713.jpeg.jpg"
+            alt="the beatles movie poster"
+          />
+          <div>
+            <div>Help!</div>
+            <div>1965 film</div>
+          </div>
+          <div id="film-space"></div>
+          <div></div>
+          <svg class="results-about-arrow" viewBox="0 0 24 24">
+            <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"></path>
+          </svg>
+        </div>
         <hr class="results-bar" />
-        <div>help!</div>
-        <hr />
+        <div class="help-album">
+          <img
+            id="help-album-cover"
+            src="https://i.redd.it/2i3sxi1flah41.jpg"
+            alt="album cover art"
+          />
+          <div>
+            <div>Help!</div>
+            <div>Studio album by The Beatles</div>
+          </div>
+          <div id="album-space"></div>
+          <svg class="results-about-arrow" viewBox="0 0 24 24">
+            <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"></path>
+          </svg>
+        </div>
         <div></div>
+        <hr class="results-bar" />
+        <div class="dictionary-definition">
+          <div class="mag-box">
+            <svg id="search-mag" viewbox="0 0 24 24">
+              <path
+                d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
+              ></path>
+            </svg>
+          </div>
+          <div>
+            <div>help</div>
+            <div>Dictionary definition</div>
+          </div>
+          <div id="definition-space"></div>
+          <svg class="results-about-arrow" viewBox="0 0 24 24">
+            <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"></path>
+          </svg>
+        </div>
       </div>
       <!-- results about -->
     </body>
