starting people also ask section

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <!-- results about -->
       <div class="results-about">
         <div id="see-results">See results about</div>
-        <hr id="first-bar" />
+        <hr class="results-bar" />
         <div class="help-movie">
           <img
             id="help-movie-cover"
@@ -216,6 +216,102 @@
         </div>
       </div>
       <!-- results about -->
+      <div id="help-phon">/help/</div>
+      <div id="verb-list">verb</div>
+      <ol class="verb-defintion">
+        <li class="definitions">
+          <div>
+            make it easier for (someone) to do something by offering one's
+            services or resources.
+          </div>
+          <div style="color: rgba(157, 157, 157, 0.8)">
+            "they helped her with domestic chores"
+          </div>
+          <div class="verb-syn" style="margin-top: 15px">
+            <div style="color: green; margin: 0 10px 0 0">Similar:</div>
+            <div class="circled">assist</div>
+            <div class="circled">aid</div>
+            <div class="circled">help out</div>
+            <div class="grayed-words">lend a hand to</div>
+            <div class="grayed-words">lend a helping hand to</div>
+          </div>
+        </li>
+        <li style="margin-top: 10px" class="definitions">
+          <div>serve someone with (food or drink).</div>
+          <div style="color: rgba(157, 157, 157, 0.8)">
+            "she helped herself to a cookie"
+          </div>
+        </li>
+      </ol>
+      <div id="noun-list">
+        <div>noun</div>
+        <div class="noun-definitons">
+          <div>the action of helping someone to do something; assistance.</div>
+          <div style="color: rgba(157, 157, 157, 0.8)">
+            "I asked for help from my neighbors"
+          </div>
+          <div class="noun-syns">
+            <div style="color: green; margin: 0 10px 0 0">Similar:</div>
+            <div class="circled">assistance</div>
+            <div class="circled">aid</div>
+            <div class="circled">a helping hand</div>
+            <div class="circled">support</div>
+            <div class="circled">succor</div>
+            <div class="circled">advice</div>
+          </div>
+        </div>
+        <div style="margin: 10px 0 10px 0">
+          <div>Exclamation</div>
+          <div style="margin: 5px 0 0 50px">
+            <div>used as an appeal for urgent assistance.</div>
+            <div style="color: rgba(157, 157, 157, 0.8)">
+              "Help! I'm drowning!"
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr id="translations-definitions" />
+      <div id="translations-definitions-text">
+        <svg id="down-arrow" viewBox="0 0 24 24">
+          <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"></path>
+        </svg>
+        <div>Translations and definitions</div>
+      </div>
+
+      <!-- people also ask... -->
+
+      <div class="people-also-ask">
+        <div class="people-ask-column">
+          <div style="font-size: 25px; font-weight: 600">People also ask</div>
+          <svg id="people-ask-svg" viewBox="0 0 24 24">
+            <path
+              d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
+            ></path>
+          </svg>
+        </div>
+        <hr />
+        <div>
+          <div>What is a fancy word for help?</div>
+          <!-- <svg viewBox='0 0 24 24'</svg> -->
+        </div>
+        <hr />
+        <div>
+          <div>Are the Beatles Dead?</div>
+          <!-- <svg viewBox='0 0 24 24'></svg> -->
+        </div>
+        <hr />
+        <div>
+          <div>What is a word for support?</div>
+          <!-- <svg viewBox='0 0 24 24'></svg> -->
+        </div>
+        <hr />
+        <div>
+          <div>What is the word for someone who helps others?</div>
+          <!-- <svg viewBox='0 0 24 24'></svg> -->
+        </div>
+      </div>
+
+      <!-- people also ask.... -->
     </body>
   </body>
 </html>
