completed people also ask

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
       <!-- people also ask... -->
 
       <div class="people-also-ask">
-        <div class="people-ask-column">
+        <div class="people-ask-rows">
           <div style="font-size: 25px; font-weight: 600">People also ask</div>
           <svg id="people-ask-svg" viewBox="0 0 24 24">
             <path
@@ -289,26 +289,41 @@
             ></path>
           </svg>
         </div>
-        <hr />
-        <div>
-          <div>What is a fancy word for help?</div>
-          <!-- <svg viewBox='0 0 24 24'</svg> -->
+        <hr class="results-bar" />
+        <div class="people-ask-rows">
+          <div class="word-spacing">What is a fancy word for help?</div>
+          <div style="width: 402px"></div>
+          <svg id="down-arrow" viewBox="0 0 24 24">
+            <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"></path>
+          </svg>
         </div>
-        <hr />
-        <div>
-          <div>Are the Beatles Dead?</div>
-          <!-- <svg viewBox='0 0 24 24'></svg> -->
+        <hr class="results-bar" />
+        <div class="people-ask-rows">
+          <div class="word-spacing">Are the Beatles Dead?</div>
+          <div style="width: 470px"></div>
+          <svg id="down-arrow" viewBox="0 0 24 24">
+            <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"></path>
+          </svg>
         </div>
-        <hr />
-        <div>
-          <div>What is a word for support?</div>
-          <!-- <svg viewBox='0 0 24 24'></svg> -->
+        <hr class="results-bar" />
+        <div class="people-ask-rows">
+          <div class="word-spacing">What is a word for support?</div>
+          <div style="width: 425px"></div>
+          <svg id="down-arrow" viewBox="0 0 24 24">
+            <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"></path>
+          </svg>
         </div>
-        <hr />
-        <div>
-          <div>What is the word for someone who helps others?</div>
-          <!-- <svg viewBox='0 0 24 24'></svg> -->
+        <hr class="results-bar" />
+        <div class="people-ask-rows">
+          <div class="word-spacing">
+            What is the word for someone who helps others?
+          </div>
+          <div style="width: 255px"></div>
+          <svg id="down-arrow" viewBox="0 0 24 24">
+            <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"></path>
+          </svg>
         </div>
+        <hr class="results-bar" />
       </div>
 
       <!-- people also ask.... -->
