completed query results

--- a/index.html
+++ b/index.html
@@ -327,6 +327,199 @@
       </div>
 
       <!-- people also ask.... -->
+
+      <div class="query-result">
+        <div class="link-address">
+          https://www.merriam-webster.com > dictionary > help
+        </div>
+        <div class="large-query-title">
+          Help | Definition of Help by Merriam-Webster
+        </div>
+        <div class="meta-data">
+          1 : an act or instance of helping : aid I need your help. · 2 : the
+          fact of being useful or helpful She's not much help. · 3 : the ability
+          to be helped We are beyond help. · 4 ...
+        </div>
+        <div class="internal-links">
+          ‎Beyond Help · ‎Help Desk · ‎Cannot Help Oneself · ‎Helping Hand
+        </div>
+      </div>
+
+      <!-- youtube recomendations -->
+      <div class="video-suggestions">
+        <div class="video-icons">
+          <svg id="video-svg" viewBox="0 0 24 24">
+            <path
+              d="M10 16.5l6-4.5-6-4.5v9zM5 20h14a1 1 0 0 0 1-1V5a1 1 0 0 0-1-1H5a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1zm14.5 2H5a3 3 0 0 1-3-3V4.4A2.4 2.4 0 0 1 4.4 2h15.2A2.4 2.4 0 0 1 22 4.4v15.1a2.5 2.5 0 0 1-2.5 2.5"
+            ></path>
+          </svg>
+          <div style="margin: 0 10px 0 10px; font-size: 30px">Videos</div>
+          <svg ID="video-svg" viewBox="0 0 24 24">
+            <path
+              d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
+            ></path>
+          </svg>
+        </div>
+        <hr class="results-bar" />
+        <div class="video-column">
+          <img
+            class="help-albums"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSwactMljLK5RR89Mqxfcr55vK4XvkgVU6PIw&usqp=CAU"
+          />
+          <div class="video-suggestion-text">
+            <div class="video-link">The Beatles - Help!</div>
+            <div>YouTube · TheBeatlesVEVO</div>
+            <div>Jun 21, 2018</div>
+          </div>
+        </div>
+        <hr class="results-bar" />
+        <div class="video-column">
+          <img
+            class="help-albums"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZcE7Za4ulygHU2OOkh5SjyppkOChNkoibzA&usqp=CAU"
+          />
+          <div class="video-suggestion-text">
+            <div class="video-link">Help! (remastered 2009)</div>
+            <div>YouTube · TheBeatles - Topic</div>
+            <div>Jun 17, 2018</div>
+          </div>
+        </div>
+        <hr class="results-bar" />
+        <div class="video-column">
+          <img
+            class="help-albums"
+            src="https://images6.fanpop.com/image/photos/36600000/The-Beatles-image-the-beatles-36630507-500-422.jpg"
+          />
+          <div class="video-suggestion-text">
+            <div class="video-link">Help! (remastered 2015)</div>
+            <div>YouTube · TheBeatles - Topic</div>
+            <div>Jun 17, 2018</div>
+          </div>
+        </div>
+        <hr id="see-more-videos" />
+        <div class="more-videos-box">
+          <svg id="right-arrow" viewBox="0 0 24 24">
+            <path
+              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
+            ></path>
+          </svg>
+          <div>view all</div>
+        </div>
+      </div>
+
+      <!-- query results -->
+
+      <div class="query-result">
+        <div class="link-address">https://en.wikipedia.org > wiki > Help!</div>
+        <div class="large-query-title">Help! - Wikipedia</div>
+        <div class="meta-data">
+          Help! is the fifth studio album by the English rock band the Beatles
+          and the soundtrack to their film of the same name. It was released on
+          6 August 1965. Seven of ...
+        </div>
+        <div class="internal-links">
+          ‎Music · ‎Critical reception · ‎North American Capitol... · ‎Charts
+          and certifications
+        </div>
+      </div>
+      <div class="query-result">
+        <div class="link-address">
+          https://www.thesaurus.com > browse > help
+        </div>
+        <div class="large-query-title">
+          193 Synonyms & Antonyms for HELP | Thesaurus.com
+        </div>
+        <div class="meta-data">
+          Find 193 ways to say HELP, along with antonyms, related words, and
+          example sentences at Thesaurus.com, the world's most trusted free
+          thesaurus.
+        </div>
+      </div>
+      <div class="query-result">
+        <div class="link-address">
+          https://www.dictionary.com > browse > help
+        </div>
+        <div class="large-query-title">
+          Help | Definition of Help at Dictionary.com
+        </div>
+        <div class="meta-data">
+          verb (used with object) · to give or provide what is necessary to
+          accomplish a task or satisfy a need; contribute strength or means to;
+          render assistance to; cooperate​ ...
+        </div>
+      </div>
+      <div class="query-result">
+        <div class="link-address">
+          https://www.thebeatles.com > album > help
+        </div>
+        <div class="large-query-title">Help! | The Beatles</div>
+        <div class="meta-data">
+          Like A Hard Day's Night, Help! contained the songs from the film on
+          side one of the album with the other side ...
+        </div>
+      </div>
+      <div class="query-result">
+        <div class="link-address">https://support.google.com/?hl=en</div>
+        <div class="large-query-title">Google Help</div>
+        <div class="meta-data">How can we help you?</div>
+      </div>
+      <div class="query-result">
+        <div class="link-address">
+          https://dictionary.cambridge.org > us > dictionary > english > help
+        </div>
+        <div class="large-query-title">
+          HELP | definition in the Cambridge English Dictionary
+        </div>
+        <div class="meta-data">
+          help verb (MAKE EASIER) ... to make it possible or easier for someone
+          to do something: [ T ] How can I help you? [ T ] Please help those
+          less fortunate than you are.
+        </div>
+      </div>
+      <div class="query-result">
+        <div class="link-address">https://www.imdb.com > title</div>
+        <div class="large-query-title">Help! (1965) - IMDb</div>
+        <div class="meta-data">
+          Help!: Directed by Richard Lester. With The Beatles, Leo McKern,
+          Eleanor Bron, Victor Spinetti. Sir Ringo Starr finds himself the human
+          sacrifice target of a cult, ...
+        </div>
+        <div class="internal-links">
+          ‎Music · ‎Critical reception · ‎North American Capitol... · ‎Charts
+          and certifications
+        </div>
+      </div>
+      <div class="query-result">
+        <div class="link-address">https://en.wiktionary.org > wiki > help</div>
+        <div class="large-query-title">help - Wiktionary</div>
+        <div class="meta-data">
+          Verb · (transitive) To provide assistance to (someone or something). ·
+          (transitive) To assist (a person) in getting something, especially
+          food or drink at table; used ...
+        </div>
+      </div>
+
+      <!-- related searches -->
+      <div class="related-searches">
+        <div class='searches-text'>
+          <div style="font-size: 25px">Related searches</div>
+          <svg style="width: 30px" viewBox="0 0 24 24">
+            <path
+              d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
+            ></path>
+        </div>
+        </svg>
+        <hr class='results-bar'/>
+        <div class='song-search'>
+          <div>Beatles songs</div>
+          <svg style='width:40px' viewbox='0 0 24 24'>
+            <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"></path>
+          </svg>
+        </div>
+      </div>
+
+      <!-- album covers -->
+
     </body>
   </body>
 </html>
