completed mag searches

--- a/index.html
+++ b/index.html
@@ -215,7 +215,6 @@
           </svg>
         </div>
       </div>
-      <!-- results about -->
       <div id="help-phon">/help/</div>
       <div id="verb-list">verb</div>
       <ol class="verb-defintion">
@@ -325,8 +324,6 @@
         </div>
         <hr class="results-bar" />
       </div>
-
-      <!-- people also ask.... -->
 
       <div class="query-result">
         <div class="link-address">
@@ -511,15 +508,111 @@
         </svg>
         <hr class='results-bar'/>
         <div class='song-search'>
-          <div>Beatles songs</div>
+          <div style='display: flex; align-items: center;'>
+            <img style='width: 50px; margin-right:10px' src='https://img.youtube.com/vi/SyNt5zm3U_M/hqdefault.jpg'>
+            <div>Beatles songs</div>
+          </div>
           <svg style='width:40px' viewbox='0 0 24 24'>
             <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"></path>
           </svg>
         </div>
+        <hr class='results-bar'/>
+        <div class='song-search'>
+          <div style='display: flex; align-items: center;'>
+            <img style='width: 50px; margin-right:10px' src='https://i.ytimg.com/vi/Cs5vUfddkT8/maxresdefault.jpg'>
+            <div>Happy beatles songs</div>
+          </div>
+          <svg style='width:40px' viewbox='0 0 24 24'>
+            <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"></path>
+          </svg>
+        </div>
+        <hr class='results-bar'/>
+        <div class='song-search'>
+          <div style='display: flex; align-items: center;'>
+            <img style='width: 50px; margin-right:10px' src='https://i.ytimg.com/vi/lOWrScjXMRE/maxresdefault.jpg'>
+            <div>The Beatles - Help song</div>
+          </div>
+          <svg style='width:40px' viewbox='0 0 24 24'>
+            <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"></path>
+          </svg>
+        </div>
+        <hr class='results-bar'/>
+        <div class='song-search'>
+          <div style='display: flex; align-items: center;'>
+            <img style='width: 50px; margin-right:10px' src='https://i.ytimg.com/vi/UelDrZ1aFeY/maxresdefault.jpg'>
+            <div>Beatles songs written by George Harrison</div>
+          </div>
+          <svg style='width:40px' viewbox='0 0 24 24'>
+            <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"></path>
+          </svg>
+        </div>
+
+        <!-- mag searches -->
+
+      <div class='mag-searches'>
+        <div class='mag-column'>
+          <div class='mag-row'>
+            <div class='individual-mag'>
+              <svg class='mag-icon' viewBox='0 0 24 24'>
+                <path d='M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'></path>
+              </svg>
+              <div class='mag-text'>i need help</div>
+            </div>
+            <div class='individual-mag'>
+              <svg class='mag-icon' viewBox='0 0 24 24'>
+                <path d='M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'></path>
+              </svg>
+              <div class='mag-text'>help synonym</div>
+            </div>
+          </div>
+          <div class='mag-row'>
+            <div class='individual-mag'>
+              <svg class='mag-icon' viewBox='0 0 24 24'>
+                <path d='M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'></path>
+              </svg>
+              <div class='mag-text'>help movie</div>
+            </div>
+            <div class='individual-mag'>
+              <svg class='mag-icon' viewBox='0 0 24 24'>
+                <path d='M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'></path>
+              </svg>
+              <div class='mag-text'>the beatles help! songs</div>
+            </div>
+          </div>
+          <div class='mag-row'>
+            <div class='individual-mag'>
+              <svg class='mag-icon' viewBox='0 0 24 24'>
+                <path d='M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'></path>
+              </svg>
+              <div class='mag-text'>help lyrics</div>
+            </div>
+            <div class='individual-mag'>
+              <svg class='mag-icon' viewBox='0 0 24 24'>
+                <path d='M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'></path>
+              </svg>
+              <div class='mag-text'>google help</div>
+            </div>
+          </div>
+          <div class='mag-row'>
+            <div class='individual-mag'>
+              <svg class='mag-icon' viewBox='0 0 24 24'>
+                <path d='M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'></path>
+              </svg>
+              <div class='mag-text'>help meaning</div>
+            </div>
+            <div class='individual-mag'>
+              <svg class='mag-icon' viewBox='0 0 24 24'>
+                <path d='M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z'></path>
+              </svg>
+              <div class='mag-text'>help beatles</div>
+            </div>
+          </div>
+        </div>
       </div>
-
-      <!-- album covers -->
-
+      <img id='google-img' src='src/google.png'>
     </body>
   </body>
 </html>
+
+
+
