--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <!-- nav bar -->
 
-    <body>
+    <main>
       <div class="nav-bar">
         <ul class="nav-bar-left" style="list-style-type: none">
           <li class="nav-bar-all">
@@ -609,9 +609,26 @@
           </div>
         </div>
       </div>
-      <img id='google-img' src='src/google.png'>
-    </body>
+      <img style='cursor: pointer;' id='google-img' src='src/google.png'>
+    </main>
   </body>
+  <footer class='footer'>
+    <div class='location'>
+      <svg style='width:13px; padding-right:5px' viewBox='0 0 100 100'>
+        <circle cx="50" cy="50" r="50"/>
+      </svg>
+      <div id='my-location'>85254, Phoenix, AZ</div>
+      <div id='location-text'>- Based on your past activity - Use precise location - Learn more</div>
+    </div>
+    <div class='location'>
+      <div class='help'>
+        <div>Help</div>
+        <div>Send feedback</div>
+        <div>Privacy</div>
+        <div>Terms</div>
+      </div>
+    </div>
+  </footer>
 </html>
 
 
